# repo-d

./: Cargo.toml  README.md  repod.service
examples/: .repodrc.toml  example.json
src/: main.rs
src/configs/: default_configs.rs  mod.rs
src/configuration/: defaults.rs  mod.rs
src/scripts/: add_repo.rs  list.rs  mod.rs  remove_repo.rs  run.rs  start.rs
src/server/: mod.rs
